--- a/.github/workflows/lighthouseci.yml
+++ b/.github/workflows/lighthouseci.yml
@@ -2,20 +2,26 @@ name: Lighthouse CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   lhci:
     runs-on: ubuntu-latest
     steps:
-      - name: Install Lighthouse CI
-        run: |
-          npm install -g @lhci/cli@0.13.x
+      # 1 — check out repo so LHCI can read a git hash
+      - uses: actions/checkout@v4
+
+      # 2 — install LHCI
+      - name: Install Lighthouse CI CLI
+        run: npm install -g @lhci/cli@0.13.x
+
+      # 3 — run collect ➜ assert ➜ upload on the live site
       - name: Run Lighthouse CI on live site
         run: |
           lhci collect --url=https://connorm-55.github.io/cayman/ \
             --settings.onlyCategories=performance,accessibility \
             --settings.emulatedFormFactor=desktop
-          lhci assert --assertions.performance=warning=90,error=0 \
-                      --assertions.accessibility=warning=90,error=0
+          lhci assert \
+            --assertions.categories:performance=warning=90,error=0 \
+            --assertions.categories:accessibility=warning=90,error=0
           lhci upload --target=temporary-public-storage
